welcome.lessons.welcome.bat.bool2.AnswerCell.scala.code
def answerCell(isMorning:Boolean, isMom:Boolean, isAsleep:Boolean):Boolean = {
	if ((isMorning == true && isMom == false) || isAsSleep ==true) {
		return false
	} else { 
		return true
	}
}
